重构后启动成功但api文档未解决