@@ -6,123 +6,102 @@ import com.lawfirm.model.workflow.dto.process.ProcessQueryDTO;
 import com.lawfirm.model.workflow.dto.process.ProcessUpdateDTO;
 import com.lawfirm.model.workflow.service.ProcessService;
 import com.lawfirm.model.workflow.vo.ProcessVO;
-import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.flowable.engine.RuntimeService;
-import org.flowable.engine.TaskService;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
-import org.springframework.stereotype.Component;
-import org.springframework.transaction.annotation.Transactional;
+import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 /**
- * 流程服务实现类
+ * 流程服务空实现
+ * <p>
+ * 当工作流模块被禁用时，提供所有流程相关操作的空实现
+ * </p>
  */
 @Slf4j
-@Component("coreProcessServiceImpl")
-@RequiredArgsConstructor
-@ConditionalOnProperty(prefix = "lawfirm", name = "workflow.enabled", havingValue = "true", matchIfMissing = false)
+@Service
+@ConditionalOnProperty(prefix = "lawfirm", name = "workflow.enabled", havingValue = "false", matchIfMissing = true)
 public class ProcessServiceImpl implements ProcessService {
 
-    private final RuntimeService runtimeService;
-    private final TaskService taskService;
-
     @Override
-    @Transactional(rollbackFor = Exception.class)
     public Long createProcess(ProcessCreateDTO createDTO) {
-        log.info("创建流程: {}", createDTO);
-        // 实现创建流程的逻辑
-        return 0L;
+        log.warn("工作流已禁用，无法创建流程: {}", createDTO);
+        return -1L;
     }
 
     @Override
     public void updateProcess(ProcessUpdateDTO updateDTO) {
-        log.info("更新流程: {}", updateDTO);
-        // 实现更新流程的逻辑
+        log.warn("工作流已禁用，无法更新流程: {}", updateDTO.getId());
     }
 
     @Override
     public void deleteProcess(Long id) {
-        log.info("删除流程: {}", id);
-        // 实现删除流程的逻辑
+        log.warn("工作流已禁用，无法删除流程: {}", id);
     }
 
     @Override
     public ProcessVO getProcess(Long id) {
-        log.info("获取流程: {}", id);
-        // 实现获取流程的逻辑
+        log.warn("工作流已禁用，无法获取流程: {}", id);
         return null;
     }
 
     @Override
     public List<ProcessVO> listProcesses(ProcessQueryDTO queryDTO) {
-        log.info("列出流程: {}", queryDTO);
-        // 实现列出流程的逻辑
-        return List.of();
+        log.warn("工作流已禁用，无法查询流程列表");
+        return Collections.emptyList();
     }
 
     @Override
     public Page<ProcessVO> getProcessList(ProcessQueryDTO queryDTO, int current, int size) {
-        log.info("分页获取流程列表: {}, current: {}, size: {}", queryDTO, current, size);
-        // 实现分页获取流程列表的逻辑
-        return new Page<>();
+        log.warn("工作流已禁用，无法分页查询流程列表");
+        return new Page<>(current, size, 0);
     }
 
     @Override
     public void startProcess(Long id) {
-        log.info("启动流程: {}", id);
-        // 实现启动流程的逻辑
+        log.warn("工作流已禁用，无法启动流程: {}", id);
     }
 
     @Override
     public void suspendProcess(Long id) {
-        log.info("暂停流程: {}", id);
-        // 实现暂停流程的逻辑
+        log.warn("工作流已禁用，无法暂停流程: {}", id);
     }
 
     @Override
     public void resumeProcess(Long id) {
-        log.info("恢复流程: {}", id);
-        // 实现恢复流程的逻辑
+        log.warn("工作流已禁用，无法恢复流程: {}", id);
     }
 
     @Override
     public void terminateProcess(Long id) {
-        log.info("终止流程: {}", id);
-        // 实现终止流程的逻辑
+        log.warn("工作流已禁用，无法终止流程: {}", id);
     }
 
     @Override
     public void cancelProcess(Long id) {
-        log.info("取消流程: {}", id);
-        // 实现取消流程的逻辑
+        log.warn("工作流已禁用，无法取消流程: {}", id);
     }
 
     @Override
     public void completeProcess(Long id) {
-        log.info("完成流程: {}", id);
-        // 实现完成流程的逻辑
+        log.warn("工作流已禁用，无法完成流程: {}", id);
     }
 
     @Override
     public String startProcessInstance(String processDefinitionKey, String businessKey, Map<String, Object> variables) {
-        log.info("启动流程实例: processDefinitionKey: {}, businessKey: {}, variables: {}", 
-                processDefinitionKey, businessKey, variables);
-        // 实现启动流程实例的逻辑
-        return "";
+        log.warn("工作流已禁用，无法启动流程实例: {}, 业务键: {}", processDefinitionKey, businessKey);
+        return "workflow-disabled";
     }
 
     @Override
     public void completeTask(String taskId, Map<String, Object> variables) {
-        log.info("完成任务: taskId: {}, variables: {}", taskId, variables);
-        // 实现完成任务的逻辑
+        log.warn("工作流已禁用，无法完成任务: {}", taskId);
     }
 
     @Override
     public void terminateProcessInstance(String processInstanceId, String reason) {
-        log.info("终止流程实例: processInstanceId: {}, reason: {}", processInstanceId, reason);
-        // 实现终止流程实例的逻辑
+        log.warn("工作流已禁用，无法终止流程实例: {}, 原因: {}", processInstanceId, reason);
     }
 } 
